java/java-tests/testData/codeInsight/daemonCodeAnalyzer/javadocDeclaration/resolve/pkg/package-info.java
/**
 * {@linkplain <error descr="Cannot resolve symbol 'File'">File</error>} {@link <error descr="Cannot resolve symbol 'Set'">Set</error>}
 * @see <error descr="Cannot resolve symbol 'List'">List</error>
 */
package pkg;